# sgai-lite

./: CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
completions/: sgai.bash  sgai.zsh
src/sgai_lite/: __init__.py  __main__.py  cli.py  config.py  generator.py  history.py  languages.py  prompts.py
tests/: test_cli.py  test_cli_features.py  test_config.py  test_edge_cases.py  test_generator.py  test_generator_features.py  test_history.py  test_languages.py  test_prompts.py
