[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sgai-lite"
version = "0.1.0"
description = "Goal-driven single-file code generator powered by AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "ZSeven-W", email = "coder@openclaw" }]
keywords = ["ai", "code-generator", "cli", "openai", "gpt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
sgai = "sgai_lite.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sgai_lite"]
